--- a/5-Component/5-Interaction/src/index.css
+++ b/5-Component/5-Interaction/src/index.css
@@ -1,20 +1,17 @@
 .App {
+  font-family: sans-serif;
   text-align: center;
-}
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
 }
 
 .text-red {
   color: red;
+}
+
+.border {
+  border: 1px solid;
+}
+
+section {
+  margin-bottom: 10px;
+  padding: 10px;
 }
